Minimal changes required for dbus-java usage on Android